src/main/java/com/example/tinkoffstocksservice/adapter/web/error/common/ErrorCode.java
package com.example.tinkoffstocksservice.adapter.web.error.common;

public enum ErrorCode {
    VALIDATION_ERROR,
    NOT_FOUND_EXCEPTION
}
